{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 494,
  "lineage": "08ec8788-3eed-d6d1-6ac0-35ac5327eef1",
  "resources": [
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:loadbalancer/app/loadBalancerPrivate/4d5c37ab317b8d69",
            "arn_suffix": "app/loadBalancerPrivate/4d5c37ab317b8d69",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-loadBalancerPrivate-771108938.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:loadbalancer/app/loadBalancerPrivate/4d5c37ab317b8d69",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "loadBalancerPrivate",
            "preserve_host_header": false,
            "security_groups": [
              "sg-019c8c0eb0fc7099f",
              "sg-056af75d4fb2318ce",
              "sg-0946dbc49a2829795",
              "sg-0ee62e4b5f43c38e7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06e8020967e82e15e"
              },
              {
                "subnet_id": "subnet-09753150dc458f926"
              },
              {
                "subnet_id": "subnet-0a73e940eeb39f55e"
              }
            ],
            "subnets": [
              "subnet-06e8020967e82e15e",
              "subnet-09753150dc458f926",
              "subnet-0a73e940eeb39f55e"
            ],
            "vpc_id": "vpc-0e9d65bfafbffdde7",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:loadbalancer/app/loadBalancerPublic/e560fae0e0632dd7",
            "arn_suffix": "app/loadBalancerPublic/e560fae0e0632dd7",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "loadBalancerPublic-2030194520.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:loadbalancer/app/loadBalancerPublic/e560fae0e0632dd7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "loadBalancerPublic",
            "preserve_host_header": false,
            "security_groups": [
              "sg-019c8c0eb0fc7099f",
              "sg-056af75d4fb2318ce",
              "sg-0946dbc49a2829795",
              "sg-0ee62e4b5f43c38e7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02d291d75e2d86459"
              },
              {
                "subnet_id": "subnet-053984a827833e7d6"
              },
              {
                "subnet_id": "subnet-083458cb4646b0956"
              }
            ],
            "subnets": [
              "subnet-02d291d75e2d86459",
              "subnet-053984a827833e7d6",
              "subnet-083458cb4646b0956"
            ],
            "vpc_id": "vpc-0e9d65bfafbffdde7",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:listener/app/loadBalancerPrivate/4d5c37ab317b8d69/b40726bab9ac598a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-auth/0e58c6afd27416e4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:listener/app/loadBalancerPrivate/4d5c37ab317b8d69/b40726bab9ac598a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:loadbalancer/app/loadBalancerPrivate/4d5c37ab317b8d69",
            "mutual_authentication": [],
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.load_balancer_private",
            "module.load_balancer.aws_lb_target_group.target_group_auth",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:listener/app/loadBalancerPublic/e560fae0e0632dd7/f2a145edcb4ccca8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-status/3c05aeba2b895bd0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:listener/app/loadBalancerPublic/e560fae0e0632dd7/f2a145edcb4ccca8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:loadbalancer/app/loadBalancerPublic/e560fae0e0632dd7",
            "mutual_authentication": [],
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.load_balancer_public",
            "module.load_balancer.aws_lb_target_group.target_group_status",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-heating/fc81f92cfcf56a57",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:listener-rule/app/loadBalancerPublic/e560fae0e0632dd7/f2a145edcb4ccca8/ad838282064b479a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/heating/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:listener-rule/app/loadBalancerPublic/e560fae0e0632dd7/f2a145edcb4ccca8/ad838282064b479a",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:listener/app/loadBalancerPublic/e560fae0e0632dd7/f2a145edcb4ccca8",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.load_balancer_public",
            "module.load_balancer.aws_lb_listener.public_listener",
            "module.load_balancer.aws_lb_target_group.target_group_heating",
            "module.load_balancer.aws_lb_target_group.target_group_status",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-lighting/193fb9ed73baff3a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:listener-rule/app/loadBalancerPublic/e560fae0e0632dd7/f2a145edcb4ccca8/6855639a6d1dbf2d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/lights/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:listener-rule/app/loadBalancerPublic/e560fae0e0632dd7/f2a145edcb4ccca8/6855639a6d1dbf2d",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:listener/app/loadBalancerPublic/e560fae0e0632dd7/f2a145edcb4ccca8",
            "priority": 101,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.load_balancer_public",
            "module.load_balancer.aws_lb_listener.public_listener",
            "module.load_balancer.aws_lb_target_group.target_group_lighting",
            "module.load_balancer.aws_lb_target_group.target_group_status",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-auth/0e58c6afd27416e4",
            "arn_suffix": "targetgroup/tg-auth/0e58c6afd27416e4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-auth/0e58c6afd27416e4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:767397665610:loadbalancer/app/loadBalancerPrivate/4d5c37ab317b8d69"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-auth",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-heating/fc81f92cfcf56a57",
            "arn_suffix": "targetgroup/tg-heating/fc81f92cfcf56a57",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-heating/fc81f92cfcf56a57",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:767397665610:loadbalancer/app/loadBalancerPublic/e560fae0e0632dd7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-heating",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-lighting/193fb9ed73baff3a",
            "arn_suffix": "targetgroup/tg-lighting/193fb9ed73baff3a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-lighting/193fb9ed73baff3a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:767397665610:loadbalancer/app/loadBalancerPublic/e560fae0e0632dd7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-lighting",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-status/3c05aeba2b895bd0",
            "arn_suffix": "targetgroup/tg-status/3c05aeba2b895bd0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-status/3c05aeba2b895bd0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:767397665610:loadbalancer/app/loadBalancerPublic/e560fae0e0632dd7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-status",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-auth/0e58c6afd27416e4-20240307092701681500000011",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-auth/0e58c6afd27416e4",
            "target_id": "i-0fa740125a3a50b39"
          },
          "dependencies": [
            "module.load_balancer.aws_lb_target_group.target_group_auth",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.aws_instance.app_server_auth",
            "module.servers.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-heating/fc81f92cfcf56a57-20240307092710717400000013",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-heating/fc81f92cfcf56a57",
            "target_id": "i-0b2ee2416a5bd575e"
          },
          "dependencies": [
            "module.load_balancer.aws_lb_target_group.target_group_heating",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.aws_instance.app_server_heating",
            "module.servers.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-lighting/193fb9ed73baff3a-20240307092710570100000012",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-lighting/193fb9ed73baff3a",
            "target_id": "i-06ea14ce6315f8945"
          },
          "dependencies": [
            "module.load_balancer.aws_lb_target_group.target_group_lighting",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.aws_instance.app_server_lighting",
            "module.servers.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-status/3c05aeba2b895bd0-20240307092701354400000010",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:767397665610:targetgroup/tg-status/3c05aeba2b895bd0",
            "target_id": "i-0159387c2ae50369c"
          },
          "dependencies": [
            "module.load_balancer.aws_lb_target_group.target_group_status",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.aws_instance.app_server_status",
            "module.servers.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd500c57c8c4a5d3",
            "association_id": "eipassoc-08540f288a188b326",
            "domain": "vpc",
            "id": "eipalloc-0bd500c57c8c4a5d3",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0aaa052d5fa0d2d57",
            "private_dns": "ip-10-0-100-157.eu-west-2.compute.internal",
            "private_ip": "10.0.100.157",
            "public_dns": "ec2-18-132-27-221.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.27.221",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397665610:internet-gateway/igw-0f8f2f1f0036adc33",
            "id": "igw-0f8f2f1f0036adc33",
            "owner_id": "767397665610",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "project_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd500c57c8c4a5d3",
            "association_id": "eipassoc-08540f288a188b326",
            "connectivity_type": "public",
            "id": "nat-028883621fbffda52",
            "network_interface_id": "eni-0aaa052d5fa0d2d57",
            "private_ip": "10.0.100.157",
            "public_ip": "18.132.27.221",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-083458cb4646b0956",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_gateway",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397665610:route-table/rtb-0ac2677094dac466a",
            "id": "rtb-0ac2677094dac466a",
            "owner_id": "767397665610",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-028883621fbffda52",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table_private"
            },
            "tags_all": {
              "Name": "route_table_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_nat_gateway.project_nat",
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397665610:route-table/rtb-04bf9461f5ed2ee65",
            "id": "rtb-04bf9461f5ed2ee65",
            "owner_id": "767397665610",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8f2f1f0036adc33",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table_public"
            },
            "tags_all": {
              "Name": "route_table_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08408bcde52f26c39",
            "route_table_id": "rtb-0ac2677094dac466a",
            "subnet_id": "subnet-0a73e940eeb39f55e"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_gateway",
            "module.networking.aws_nat_gateway.project_nat",
            "module.networking.aws_route_table.route_table_private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0423aefa98532dc21",
            "route_table_id": "rtb-0ac2677094dac466a",
            "subnet_id": "subnet-06e8020967e82e15e"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_gateway",
            "module.networking.aws_nat_gateway.project_nat",
            "module.networking.aws_route_table.route_table_private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdcb87904ca3de0f",
            "route_table_id": "rtb-0ac2677094dac466a",
            "subnet_id": "subnet-09753150dc458f926"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_gateway",
            "module.networking.aws_nat_gateway.project_nat",
            "module.networking.aws_route_table.route_table_private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9727486c62a1262",
            "route_table_id": "rtb-04bf9461f5ed2ee65",
            "subnet_id": "subnet-083458cb4646b0956"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.route_table_public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e62171f8ae0790c",
            "route_table_id": "rtb-04bf9461f5ed2ee65",
            "subnet_id": "subnet-02d291d75e2d86459"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.route_table_public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fd84253252b724e",
            "route_table_id": "rtb-04bf9461f5ed2ee65",
            "subnet_id": "subnet-053984a827833e7d6"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.route_table_public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397665610:subnet/subnet-0a73e940eeb39f55e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a73e940eeb39f55e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397665610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-private0-eu-west-2a"
            },
            "tags_all": {
              "Name": "project-subnet-private0-eu-west-2a"
            },
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397665610:subnet/subnet-06e8020967e82e15e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e8020967e82e15e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397665610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-private1-eu-west-2b"
            },
            "tags_all": {
              "Name": "project-subnet-private1-eu-west-2b"
            },
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397665610:subnet/subnet-09753150dc458f926",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09753150dc458f926",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397665610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-private2-eu-west-2c"
            },
            "tags_all": {
              "Name": "project-subnet-private2-eu-west-2c"
            },
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397665610:subnet/subnet-083458cb4646b0956",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083458cb4646b0956",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397665610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-public0-eu-west-2a"
            },
            "tags_all": {
              "Name": "project-subnet-public0-eu-west-2a"
            },
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397665610:subnet/subnet-02d291d75e2d86459",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d291d75e2d86459",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397665610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-public1-eu-west-2b"
            },
            "tags_all": {
              "Name": "project-subnet-public1-eu-west-2b"
            },
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397665610:subnet/subnet-053984a827833e7d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053984a827833e7d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397665610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-public2-eu-west-2c"
            },
            "tags_all": {
              "Name": "project-subnet-public2-eu-west-2c"
            },
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397665610:vpc/vpc-0e9d65bfafbffdde7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d22ba790aaae5d6",
            "default_route_table_id": "rtb-0c748aa7ee64ffab7",
            "default_security_group_id": "sg-06fa315bbf6935858",
            "dhcp_options_id": "dopt-0536be7f0e8a3be2a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e9d65bfafbffdde7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c748aa7ee64ffab7",
            "owner_id": "767397665610",
            "tags": {
              "Name": "project_vpc"
            },
            "tags_all": {
              "Name": "project_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397665610:security-group/sg-0ee62e4b5f43c38e7",
            "description": "Allow egress inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee62e4b5f43c38e7",
            "ingress": [],
            "name": "allow_egress",
            "name_prefix": "",
            "owner_id": "767397665610",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397665610:security-group/sg-0946dbc49a2829795",
            "description": "Allow http inbound traffic",
            "egress": [],
            "id": "sg-0946dbc49a2829795",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "767397665610",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397665610:security-group/sg-056af75d4fb2318ce",
            "description": "Allow https inbound traffic",
            "egress": [],
            "id": "sg-056af75d4fb2318ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_https",
            "name_prefix": "",
            "owner_id": "767397665610",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:767397665610:security-group/sg-019c8c0eb0fc7099f",
            "description": "Allow ssh inbound traffic",
            "egress": [],
            "id": "sg-019c8c0eb0fc7099f",
            "ingress": [
              {
                "cidr_blocks": [
                  "95.214.229.78/32",
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "767397665610",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e9d65bfafbffdde7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1997555065",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ee62e4b5f43c38e7",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-343274300",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0946dbc49a2829795",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_http"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-3920888799",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0946dbc49a2829795",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_http"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3405910416",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-056af75d4fb2318ce",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_https"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "95.214.229.78/32",
              "10.0.0.0/16"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2941138313",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-019c8c0eb0fc7099f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_ssh",
            "module.security.data.http.myipaddr"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server_auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:767397665610:instance/i-0fa740125a3a50b39",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa740125a3a50b39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "My Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00f2933663273dbdb",
            "private_dns": "ip-10-0-0-208.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04743d052a4e51d6c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a73e940eeb39f55e",
            "tags": {
              "Name": "server_auth"
            },
            "tags_all": {
              "Name": "server_auth"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019c8c0eb0fc7099f",
              "sg-056af75d4fb2318ce",
              "sg-0946dbc49a2829795",
              "sg-0ee62e4b5f43c38e7"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:767397665610:instance/i-05ca8da10b8c5ba94",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ca8da10b8c5ba94",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "My Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b0d567f4f6167006",
            "private_dns": "ip-10-0-100-106.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.100.106",
            "public_dns": "ec2-3-10-234-22.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.234.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01cd1d9f24af7cd8b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083458cb4646b0956",
            "tags": {
              "Name": "server_bastion"
            },
            "tags_all": {
              "Name": "server_bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019c8c0eb0fc7099f",
              "sg-056af75d4fb2318ce",
              "sg-0946dbc49a2829795",
              "sg-0ee62e4b5f43c38e7"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server_heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:767397665610:instance/i-0b2ee2416a5bd575e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b2ee2416a5bd575e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "My Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03eda2aaf6a50198a",
            "private_dns": "ip-10-0-100-67.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.100.67",
            "public_dns": "ec2-13-40-32-89.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.32.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-096bae884c1e24662",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083458cb4646b0956",
            "tags": {
              "Name": "server_heating"
            },
            "tags_all": {
              "Name": "server_heating"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019c8c0eb0fc7099f",
              "sg-056af75d4fb2318ce",
              "sg-0946dbc49a2829795",
              "sg-0ee62e4b5f43c38e7"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server_lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:767397665610:instance/i-06ea14ce6315f8945",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06ea14ce6315f8945",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "My Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ebc22f561d40dbdf",
            "private_dns": "ip-10-0-101-68.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.68",
            "public_dns": "ec2-18-130-98-184.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.98.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0672286b2df74af2c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d291d75e2d86459",
            "tags": {
              "Name": "server_lighting"
            },
            "tags_all": {
              "Name": "server_lighting"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019c8c0eb0fc7099f",
              "sg-056af75d4fb2318ce",
              "sg-0946dbc49a2829795",
              "sg-0ee62e4b5f43c38e7"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server_status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:767397665610:instance/i-0159387c2ae50369c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0159387c2ae50369c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "My Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01996aeee91113dca",
            "private_dns": "ip-10-0-102-192.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.102.192",
            "public_dns": "ec2-18-133-186-236.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.186.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08220e632b3cde756",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053984a827833e7d6",
            "tags": {
              "Name": "server_status"
            },
            "tags_all": {
              "Name": "server_status"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019c8c0eb0fc7099f",
              "sg-056af75d4fb2318ce",
              "sg-0946dbc49a2829795",
              "sg-0ee62e4b5f43c38e7"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.data.aws_ami.ubuntu"
          ]
        }
      ]
    }
  ]
}